src/objects/Win_Local_Assignment__c.object
<CustomObject>
    <description>This system table contains information about assignments of local mobile application ids to original salesforce ids. Is updated during the upload process and cleaned with separate call on end of the upload</description>
    <fields>
        <fullName>Device_Id__c</fullName>
        <description>Id of the device from which local Id was created</description>
        <label>Device Id</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Id__c</fullName>
        <description>Local identifier of the new record on the mobile app</description>
        <label>Local Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Id__c</fullName>
        <description>Salesforce Id of the newly created record</description>
        <label>Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Wings Local Assignment</label>
    <nameField>
        <displayFormat>WLA-{0000}</displayFormat>
        <label>Win Local Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wings Local Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>